; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_input.c_ipq_updateparams.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_input.c_ipq_updateparams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ipqlock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@maxnipq = common dso_local global i64 0, align 8
@ipq_limit = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ipq_updateparams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipq_updateparams() #0 {
  %1 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %2 = call i32 @LCK_MTX_ASSERT(i32* @ipqlock, i32 %1)
  %3 = load i64, i64* @maxnipq, align 8
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* @ipq_limit, align 4
  br label %6

6:                                                ; preds = %5, %0
  %7 = load i64, i64* @maxnipq, align 8
  %8 = icmp sgt i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i64, i64* @maxnipq, align 8
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* @ipq_limit, align 4
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i64, i64* @maxnipq, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 1, i32* @ipq_limit, align 4
  br label %16

16:                                               ; preds = %15, %12
  %17 = call i32 (...) @frag_sched_timeout()
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32*, i32) #1

declare dso_local i32 @frag_sched_timeout(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
